<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_main_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_first_name"
            android:textSize="20sp"
            android:gravity="center"

            />
        <Button
            android:id="@+id/btn_main_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_btn"
            android:layout_gravity="center"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/tv_main_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/activity1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity1"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="200sp"
            android:textStyle="bold"
            />

    </LinearLayout>
</RelativeLayout>