<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_second_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            />


        <EditText
            android:id="@+id/et_second_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_last_name"
            android:gravity="center"
            android:textSize="20sp"
            />
        <Button
            android:id="@+id/btn_second_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/share_back_btn"
            />

        <TextView
            android:id="@+id/activity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity2"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="200sp"
            android:textStyle="bold"
            />




    </LinearLayout>

</RelativeLayout>